Have resolved the overflow

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -118,7 +118,7 @@
     margin: 5px;
 }
 .member_socials ion-icon{
-    font-size: 24px;
+    font-size: 20px;
     margin: 8px;
 }
 
@@ -145,6 +145,9 @@
 
 
 @media(min-width:800px){
+    .member_socials ion-icon{
+        font-size: 24px;
+    }
     .team_members{
         margin-right: 20px;
     }
